# Intake

./: README.md  TASKS.md  package.json  pyproject.toml  spec.md
.github/agents/: chief-estimator-risk.agent.md
.github/prompts/: estimate-risk-from-sharepoint.prompt.md
.github/workflows/: codeql.yml
docs/: Example Output.docx  data-model.md  example-output.md  index.html  index.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-estimate-risk-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-estimate-risk-agent/checklists/: requirements.md
