[project]
name = "intake"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.8"
dependencies = [
    # Add your main dependencies here
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    # Add your test dependencies here
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
